# KODA

./: CMakeLists.txt  README.md
doc/: kody.ods  spr.odt
src/: CMakeLists.txt  analyze.cpp  bitsplit.cpp  codec.cpp  dechuf.cpp  enchuf.cpp  huffman.h  nkb2gray.cpp  rle.cpp  split.cpp  table.h
